# 2048EndgameTablebase

./: .gitattributes  .gitignore  AIPlayer.py  AItest.py  Analyzer.py  BoardMover.py  BoardMoverAD.py  BookBuilder.py  BookGenerator.py  BookReader.py  BookSolverAD.py  BookSolverChunkedAD.py  Calculator.py  Config.py  Gamer.py  HTMLViewer.py  LICENSE  MainMenu.py  README.md  Settings.py  SignalHub.py  Tester.py  Trainer.py  TrieCompressor.py  backend_server.py  build_linux.sh  config  error_bridge.py  help.htm  help.md  importtime_backend_server.txt  main.py  package_linux.sh  package_windows.ps1  requirements.txt
ai_and_sort/: AIPlayer.cpp  BoardMover.h  CMakeLists.txt  README.md  build_bookgen_native.ps1  build_merge_tree_wrapper.ps1  build_unique_wrapper.ps1  egtb_data.7z  egtb_data_256.h  egtb_data_512.h  egtb_query.cpp  formation_core.pyi  make.sh  update_stubs.ps1  xss_wrapper.cpp
ai_and_sort/include/: AIPlayer - wasm.h  AIPlayer.h  AdaptiveIndex.h  BoardCodec.h  BoardMaskerAD.h  BoardMover.h  BoardMoverAD.h  BookGenerator.h  BookGeneratorUtils.h  BookSolver.h  Calculator.h  Formation.h  FormationRuntime.h  ReaderRuntime.h  VBoardMover.h
ai_and_sort/src/: AdaptiveIndex.cpp  BoardMaskerAD.cpp  BookGenerator.cpp  BookGeneratorAD.cpp  BookGeneratorUtils.cpp  BookSolver.cpp  BookSolverAD.cpp  CompressionBridge.cpp  HybridSearch.cpp  NativeLzma.cpp  bindings_ai.cpp  bindings_formation.cpp  bindings_mover.cpp  bindings_wasm.cpp  bookgen_native_wrapper.cpp  booksolver_utils_wrapper.cpp  egtb_data_1256.cpp  egtb_data_256.cpp  egtb_query.cpp  unique_wrapper.cpp
ai_and_sort/x86simdsort/x86-simd-sort/: README.md  meson_options.txt
ai_and_sort/x86simdsort/x86-simd-sort/lib/: list-of-exported-symbols.txt  meson.build  x86simdsort-avx2.cpp  x86simdsort-icl.cpp  x86simdsort-internal.h  x86simdsort-scalar.h  x86simdsort-skx.cpp  x86simdsort-spr.cpp  x86simdsort.cpp
ai_and_sort/x86simdsort/x86-simd-sort/src/: avx512-64bit-common.h  avx512-64bit-qsort.hpp  xss-common-comparators.hpp  xss-common-includes.h  xss-optimal-networks.hpp  xss-reg-networks.hpp
ai_and_sort/x86simdsort/x86-simd-sort/utils/: custom-compare.h
backend/: __init__.py  actions.py  analysis.py  analysis_core.py  animation.py  app.py  notebook.py  preload.py  replay.py  resource_paths.py  serialization.py  session.py  state.py  tester.py  trainer_helpers.py  webview_api.py
docs/: ai_core.js  ai_core.wasm  index.html  main.js  worker.js
docs/wasm_build/: CMakeLists.txt  README.md  WASM_MIGRATION_LOG.md  omp.h  test_omp.cpp
docs_and_configs/: code_structure.txt  config1  default_patterns.json  github_upload_guide.md  memo.txt  packaging_guide.md  patterns_config.json  themes.json
egtb_core/: AIPlayer.py  BoardMaskerAD.py  BoardMover.py  BoardMoverAD.py  BookBuilder.py  BookGenerator.py  BookGeneratorAD.py  BookGeneratorUtils.py  BookReader.py  BookReaderAD.py  BookSolver.py  BookSolverAD.py  BookSolverADUtils.py  BookSolverChunkedAD.py  Calculator.py  LzmaCompressor.py  TrieCompressor.py  VBoardMover.py  mover_runtime.py  replay_utils.py
engine_core/: AIPlayer.py  BoardMover.py  BookBuilder.py  BookReader.py  BookReaderAD.py  Calculator.py  VBoardMover.py  mover_runtime.py  replay_utils.py
frontend/: README.md  index.html  package-lock.json  package.json
minigames/: MinigameMover.py
native_core/: CMakeLists.txt  README.md  __init__.py  ai_core.pyi  make.sh  update_stubs.ps1  x86simdsort.h  xss_wrapper.cpp
native_core/include/: AIPlayer.h  AdaptiveIndex.h  CommonMover.h  CompressionBridge.h  FileIOUtils.h  FormationRuntime.h  HybridSearch.h  NativeLzma.h  SymmetryUtils.h  TrieCompression.h  UniqueUtils.h  VBoardMover.h
native_core/src/: AIPlayer - wasm.cpp  AIPlayer.cpp  AdaptiveIndex.cpp  BoardMaskerAD.cpp  BoardMoverAD.cpp  BookGenerator.cpp  BookGeneratorAD.cpp  BookGeneratorUtils.cpp  BookSolver.cpp  BookSolverAD.cpp  CompressionBridge.cpp  FileIOUtils.cpp  HybridSearch.cpp  NativeLzma.cpp  ReaderRuntime.cpp  TrieCompression.cpp  bindings_formation.cpp  bindings_mover.cpp  booksolver_utils_wrapper.cpp  egtb_data_1256.h  merge_tree_wrapper.cpp
native_core/x86simdsort/x86-simd-sort/: README.md  meson.build  xss_wrapper.cpp
native_core/x86simdsort/x86-simd-sort/lib/: x86simdsortcpuid.h
native_core/x86simdsort/x86-simd-sort/src/: avx2-64bit-qsort.hpp  avx2-emu-funcs.hpp  x86simdsort-static-incl.h  xss-common-qsort.h  xss-network-qsort.hpp  xss-reg-networks.hpp
src/: AIPlayer.py  AItest.py  Analyzer.py  BoardFrame.py  BoardMaskerAD.py  BoardMover.py  BoardMoverAD.py  BookBuilder.py  BookGenerator.py  BookGeneratorAD.py  BookGeneratorUtils.py  BookReader.py  BookReaderAD.py  BookSolver.py  BookSolverAD-.py  BookSolverAD.py  BookSolverADUtils.py  BookSolverAD_.py  BookSolverChunkedAD.py  Calculator.py  Config.py  Estimator.py  Gamer.py  HelperViewer.py  LzmaCompressor.py  MDViewer.py  MainMenu.py  MistakesBook.py  README.md  RecordPlayer.py  Settings.py  SignalHub.py  Tester.py  Trainer.py  TrieCompressor.py  VBoardMover.py  color_schemes.txt  config  help.md  helpZH.md  (+3 more)
src - variant/: BoardMover.py  BookBuilder.py  BookGenerator.py  BookReader.py  BookSolver.py  Calculator.py  Config.py  MainMenu.py  Settings.py  Trainer.py  what is no-x.txt
tools/: AItest.py
x86-simd-sort-modified/: Makefile  how-to-build  meson.build
x86-simd-sort-modified/lib/: list-of-exported-symbols.txt  meson.build  x86simdsort-avx2.cpp  x86simdsort-icl.cpp  x86simdsort-internal.h  x86simdsort-scalar.h  x86simdsort-skx.cpp  x86simdsort-spr.cpp  x86simdsort.cpp  x86simdsort.h
x86-simd-sort-modified/para_qsort/: how_to_build  para_qsort.cpp
x86-simd-sort-modified/src/: avx2-32bit-half.hpp  avx2-32bit-qsort.hpp  avx2-64bit-qsort.hpp  avx2-emu-funcs.hpp  avx512-16bit-common.h  avx512-16bit-qsort.hpp  avx512-32bit-qsort.hpp  avx512-64bit-argsort.hpp  avx512-64bit-common.h  avx512-64bit-qsort.hpp  avx512fp16-16bit-qsort.hpp  xss-common-argsort.h  xss-common-comparators.hpp  xss-common-keyvaluesort.hpp  xss-common-qsort.h  xss-custom-float.h  xss-network-qsort.hpp  xss-optimal-networks.hpp  xss-pivot-selection.hpp
(+130 files in other folders)
